--- a/portfolio.css
+++ b/portfolio.css
@@ -45,12 +45,14 @@ ul {
 #gameLink {
     font-size: 24px;
     text-align: center;
-    border-radius: 14px;
+    border-radius: 12px;
     margin-left: 40%;
     margin-right: 40%;
     margin-bottom: 40px;
+    padding: 5px;
     background-color: #e5e5e5;
     color: #8c8c8c;
+    href: url("p5problemset/problem_3.html");
 }
 
 #gameLink:hover {
