--- a/portfolio.css
+++ b/portfolio.css
@@ -5,8 +5,8 @@ font-family: 'Vollkorn', serif;
 
 h1 {
     text-align: center;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 10%;
+    padding-bottom: 10%;
     font-family: 'Vollkorn', serif;
 }
 
@@ -17,9 +17,11 @@ p {
     /*    background-color: #bbbbbb;*/
     color: black;
     font-family: 'Roboto', sans-serif;
-    margin-left: 60px;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    margin: 50px 80px 50px 80px;
+}
+
+h3 {
+    color: lightgray;
 }
 
 body {
@@ -33,6 +35,12 @@ ul {
     padding: 20%;
 }
 
+footer {
+    background-color: darkgray;
+    padding-top: 35px;
+    padding-bottom: 15px;
+}
+
 .container {
     display: block;
     transition: margin-left .5s;
@@ -40,23 +48,17 @@ ul {
 
 .sideHeader {
     margin: 5%;
+    color: honeydew;
 }
 
 #gameLink {
-    font-size: 24px;
-    text-align: center;
-    border-radius: 12px;
+    width: 400px;
+    height: 209px;
     margin-left: 40%;
     margin-right: 40%;
-    margin-bottom: 40px;
-    padding: 5px;
+    border-radius: 20px;
     background-color: #e5e5e5;
     color: #8c8c8c;
-    href: url("p5problemset/problem_3.html");
-}
-
-#gameLink:hover {
-    color: #404040;
 }
 
 
@@ -80,15 +82,15 @@ ul {
 }
 
 #parTwo {
-    background-image: url("images/appAcademy.png");
+    background-image: url("images/codeWall.jpg");
 }
 
 #parThree {
-    background-image: url("images/longWalk.jpg");
+    background-image: url("images/bookPages.jpg");
 }
 
 #parFour {
-    background-image: url("images/pasadenaExplorerHelmet.jpg");
+    background-image: url("images/fireAction.jpg");
 }
 
 
@@ -104,8 +106,11 @@ ul {
 /* The side navigation menu */
 
 .nav-image {
+    padding: 8px 10px 10px 10px;
     margin-top: 15px;
-    margin-left: 20px;
+    margin-left: 25px;
+    border-radius: 18px;
+    background-color: rgba(242, 242, 242, 0.4);
 }
 
 .sidenav {
